[tool.poetry]
name = "python-rpg-framework"
version = "0.1.0"
description = ""
authors = ["joshbell578 <loerr578@hsd.k12.or.us>"]
readme = "README.md"
packages = [{include = "python_rpg_framework"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
